work page overflow fix, threejs performance improvements

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,4 +8,5 @@ html {
 
 body {
   background: v.$background;
+  scroll-behavior: smooth;
 }
